# harvard-agentic-system

./: .gitignore  Makefile  README.md  pyproject.toml
experiments/: go.mod  go.sum  run_experiments.py  story_finishing.go
experiments/background_noise/: main.go
experiments/model_cascade/: main.go
experiments/output/: results_k1.json  results_k128.json  results_k16.json  results_k2.json  results_k32.json  results_k4.json  results_k64.json  results_k8.json  summary.json
experiments/story_finishing/: main.go  main_test.go
infra/: common.sh  connect_lambda.sh  setup_lambda.sh  setup_on_lambda.sh  sync_experiments.sh  sync_orla.sh  sync_repo.sh
output/aggressive_flush/: orla_exp_1769370757.yaml  results_k1.json  results_k10.json  results_k100.json
output/cascade/: baseline_1.json  baseline_2.json  baseline_3.json  baseline_4.json  comparison_results.json  ollama_1.json  ollama_2.json  ollama_3.json  ollama_4.json  ollama_baseline_1.json  ollama_baseline_2.json  ollama_baseline_3.json  ollama_baseline_4.json  orla_1.json  orla_2.json  orla_3.json  orla_4.json  orla_cascade_1769398385.yaml  orla_cascade_1769438682.yaml
output/preserve/: orla_exp_1769371017.yaml  orla_exp_1769376146.yaml  results_k1.json  results_k10.json  results_k100.json  results_k16.json  results_k2.json  results_k4.json  results_k8.json
output/preserve_on_small_turns/: orla_exp_1769371774.yaml  results_k1.json  (+2 more)
plots/: PLOT.md  README.md  __init__.py  generate_plots.py  plot_story_finishing.py  pyproject.toml
scripts/: compare_cascade_results.py  run_story_finishing_grid.sh
(+121 files in other folders)
