[project]
name = "h-agent-sys-plots"
version = "1.0.0"
description = "Plotting utilities for Harvard Agentic System experiments"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.9.2",
    "numpy==2.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the package directory
packages = ["."]

